Add ISiteContext.Position for sort order of tenant lists (e.g. in navigation)

--- a/League.Demo/Configuration/Tenant.Default.Production.config
+++ b/League.Demo/Configuration/Tenant.Default.Production.config
@@ -7,6 +7,8 @@
   <!-- May only be true for a single tenant in a tenant store. -->
   <IsDefault>True</IsDefault>
   <SiteContext>
+    <!-- The position of the tenant within tenant lists (e.g. navigation). -->
+    <Position>0</Position>
     <!-- The Url segment used to identify the site. May be empty for the default tenant. -->
     <UrlSegmentValue></UrlSegmentValue>
     <!-- The folder name used for a tenant. This name must be set. -->
@@ -25,7 +27,7 @@
         <!-- The email address of a recipient. -->
         <Address>league@volleyball-liga.de</Address>
       </ContactFrom>
-      <!-- "From" mailbox address for the contact form -->
+      <!-- "To" mailbox address for the contact form -->
       <ContactTo>
         <!-- The display name of a recipient. -->
         <DisplayName>Volleyball-Liga</DisplayName>
@@ -57,7 +59,7 @@
     <!-- Notifications sent before and after matches. -->
     <MatchNotifications>
       <!-- Number of days before the next match will be announced. 0 for none, negative number days. -->
-      <DaysBeforeNextmatch>-10</DaysBeforeNextmatch>
+      <DaysBeforeNextMatch>-10</DaysBeforeNextMatch>
       <!-- Number of days to remind 1st time for missing match results. 0 for none, positive number of days. -->
       <DaysForMatchResultReminder1>3</DaysForMatchResultReminder1>
       <!-- Number of days to remind 2nd time for missing match results. 0 for none, positive number of days. -->
