--- a/League.Demo/Configuration/Tenant.OtherOrg.Development.config
+++ b/League.Demo/Configuration/Tenant.OtherOrg.Development.config
@@ -1,163 +1,166 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <TenantContext>
-  <!-- Identifies the tenant. Value is also used for tenant-specific file names. -->
-  <Identifier>OtherOrg</Identifier>
-  <!-- The tenant GUID. -->
-  <Guid>bf2e2412-c610-4521-ae13-7bda286e4480</Guid>
-  <!-- May only be true for a single tenant in a tenant store. -->
-  <IsDefault>False</IsDefault>
-  <SiteContext>
-    <!-- The Url segment used to identify the site. May be empty for the default tenant. -->
-    <UrlSegmentValue>otherorg</UrlSegmentValue>
-    <!-- The folder name used for a tenant. This name must be set. -->
-    <FolderName>otherorg</FolderName>
-    <!-- The cookie name used Asp.Net Identity. -->
-    <IdentityCookieName>.LeagueOther</IdentityCookieName>
-    <!-- The session name used for the tenant. -->
-    <SessionName>.LeagueOther</SessionName>
-    <!-- If true, the site will not be shown in the navigation menu. -->
-    <HideInMenu>False</HideInMenu>
-    <!-- Email contact details. -->
-    <Email>
-      <ContactFrom>
-        <!-- The display name of a recipient. -->
-        <DisplayName>OtherOrganization</DisplayName>
-        <!-- The email address of a recipient. -->
-        <Address>testorg@volleyball-liga.de</Address>
-      </ContactFrom>
-      <!-- "From" mailbox address for the contact form -->
-      <ContactTo>
-        <!-- The display name of a recipient. -->
-        <DisplayName>OtherOrganization</DisplayName>
-        <!-- The email address of a recipient. -->
-        <Address>testorg@volleyball-liga.de</Address>
-      </ContactTo>
-      <!-- General "To" mailbox address for emails generated programmatically -->
-      <GeneralTo>
-        <!-- The display name of a recipient. -->
-        <DisplayName>OtherOrganization</DisplayName>
-        <!-- The email address of a recipient. -->
-        <Address>testorg@volleyball-liga.de</Address>
-      </GeneralTo>
-      <!-- General "From" mailbox address for emails generated programmatically -->
-      <GeneralFrom>
-        <!-- The display name of a recipient. -->
-        <DisplayName>OtherOrganization</DisplayName>
-        <!-- The email address of a recipient. -->
-        <Address>testorg@volleyball-liga.de</Address>
-      </GeneralFrom>
-      <!-- General "BCC" mailbox address for emails generated programmatically -->
-      <GeneralBcc>
-        <!-- The display name of a recipient. -->
-        <DisplayName>OtherOrganization</DisplayName>
-        <!-- The email address of a recipient. -->
-        <Address>testorg@volleyball-liga.de</Address>
-      </GeneralBcc>
-    </Email>
-    <!-- Notifications sent before and after matches. -->
-    <MatchNotifications>
-      <!-- Number of days before the next match will be announced. 0 for none, negative number days. -->
-      <DaysBeforeNextmatch>-10</DaysBeforeNextmatch>
-      <!-- Number of days to remind 1st time for missing match results. 0 for none, positive number of days. -->
-      <DaysForMatchResultReminder1>3</DaysForMatchResultReminder1>
-      <!-- Number of days to remind 2nd time for missing match results. 0 for none, positive number of days. -->
-      <DaysForMatchResultReminder2>10</DaysForMatchResultReminder2>
-    </MatchNotifications>
-  </SiteContext>
-  <OrganizationContext>
-    <!-- The full name of the organization. -->
-    <Name>Volleyball Other Test League</Name>
-    <!-- The short version of the organization's name. -->
-    <ShortName>Other League</ShortName>
-    <Description>The other league for test purposes.</Description>
-    <!-- The homepage for the organization (NOT the league website). -->
-    <HomepageUrl>https://volleyball-liga.de/otherorg</HomepageUrl>
-    <Bank>
-        <!-- If true, bank details are part of the confirmation email when registering a team. -->
-        <ShowBankDetailsInConfirmationEmail>True</ShowBankDetailsInConfirmationEmail>
-        <!-- The name of the payment recipient, usually the organization name. -->
-        <Recipient>axuno - Other Organization</Recipient>
-        <!-- The name of the bank where a payment is directed. -->
-        <BankName>Some Bank</BankName>
-        <!-- The BIC number of the bank account. -->
-        <Bic>ABCDEFGHXXX</Bic>
-        <!-- The IBAN number of the bank. -->
-        <Iban>DE12 345 678 910 123 456 789</Iban>
-        <!-- The participation fee, may be zero. -->
-        <Amount>12.34</Amount>
-        <!-- The currency for the participation fee. -->
-        <Currency>EUR</Currency>
-    </Bank>
-  </OrganizationContext>
-  <DbContext>
-    <!-- The connection key used to retrieve the ConnectionString -->
-    <ConnectionKey>LeagueConnectionString</ConnectionKey>
-    <!-- The catalog aka database name -->
-    <Catalog>OtherOrg</Catalog>
-    <!-- The schema inside the database -->
-    <Schema>dbo</Schema>
-    <!-- The timeout value to use with database commands -->
-    <CommandTimeOut>15</CommandTimeOut>
-  </DbContext>
-  <TournamentContext>
-    <!-- The ID of the tournament which will be used for new teams' applications -->
-    <ApplicationTournamentId>2</ApplicationTournamentId>
-    <!-- True, if teams' applications are allowed, otherwise false -->
-    <ApplicationAllowed>False</ApplicationAllowed>
-    <!-- The deadline for new teams' applications -->
-    <ApplicationDeadline>04/05/2018 00:00:00</ApplicationDeadline>
-    <!-- The ID of the tournament which will be used for to display maps -->
-    <MapTournamentId>2</MapTournamentId>
-    <!-- The ID of the tournament which will be used to display team data -->
-    <TeamTournamentId>2</TeamTournamentId>
-    <!-- The ID of the tournament which will be used to display the match plan -->
-    <MatchPlanTournamentId>2</MatchPlanTournamentId>
-    <!-- The ID of the tournament which will be used to display match results and tables -->
-    <MatchResultTournamentId>2</MatchResultTournamentId>
-    <!-- The rules which apply for creating and editing fixtures -->
-    <FixtureRuleSet>
-      <!-- The time when matches start and end normally (e.g. from 18:00 - 21:00 h) -->
-      <RegularMatchStartTime>
-        <!-- Earliest start time for a match -->
-        <MinDayTime>18:00:00</MinDayTime>
-        <!-- Latest start time for a match -->
-        <MaxDayTime>21:00:00</MaxDayTime>
-      </RegularMatchStartTime>
-      <!-- The duration which is used to generate fixtures and to determine periods where a venue is occupied -->
-      <PlannedDurationOfMatch>02:00:00</PlannedDurationOfMatch>
-      <!-- If set to true, when editing a fixture the match time must be set -->
-      <PlannedMatchDateTimeMustBeSet>True</PlannedMatchDateTimeMustBeSet>
-      <!-- If set to true, the planned match time must no include any dates found in ExcludeMatchDate table entries -->
-      <CheckForExcludedMatchDateTime>True</CheckForExcludedMatchDateTime>
-      <!-- If set to true, the planned match time must stay within the current leg date boundaries. If false, the planned time must stay with in any leg date boundaries. -->
-      <PlannedMatchTimeMustStayInCurrentLegBoundaries>False</PlannedMatchTimeMustStayInCurrentLegBoundaries>
-      <!-- If set to true, when editing a fixture the venue must be set -->
-      <PlannedVenueMustBeSet>True</PlannedVenueMustBeSet>
-      <!-- If true, when checking whether teams already have a match at a certain moment, only the date will be used (i.e. only 1 match per calendar date) -->
-      <UseOnlyDatePartForTeamFreeBusyTimes>True</UseOnlyDatePartForTeamFreeBusyTimes>
-    </FixtureRuleSet>
-    <!-- The max. number of days after RealStart where results may be changed. Negative value means 'unlimited' -->
-    <MaxDaysForResultCorrection>-1</MaxDaysForResultCorrection>
-    <!-- The rules which apply for creating and editing team data -->
-    <TeamRuleSet>
-      <HomeMatchTime>
-        <!-- If true, HomeMatchTime will be shown on team forms. If false, IsEditable, DaysOfWeekRange and ErrorIfNotInDaysOfWeekRange are irrelevant. -->
-        <IsEditable>True</IsEditable>
-        <!-- If true, the HomeMatchTime must be set, i.e. cannot be null/unspecified -->
-        <MustBeSet>True</MustBeSet>
-        <!-- Allowed days of a week -->
-        <DaysOfWeekRange>
-          <DayOfWeek>Monday</DayOfWeek>
-          <DayOfWeek>Tuesday</DayOfWeek>
-          <DayOfWeek>Wednesday</DayOfWeek>
-          <DayOfWeek>Thursday</DayOfWeek>
-          <DayOfWeek>Friday</DayOfWeek>
-          <DayOfWeek>Saturday</DayOfWeek>
-          <DayOfWeek>Sunday</DayOfWeek>
-        </DaysOfWeekRange>
-        <!-- If true, entries not in 'DaysOfWeekRange' are errors (else: warning) -->
-        <ErrorIfNotInDaysOfWeekRange>False</ErrorIfNotInDaysOfWeekRange>
-      </HomeMatchTime>
-    </TeamRuleSet>
-  </TournamentContext>
+    <!-- Identifies the tenant. Value is also used for tenant-specific file names. -->
+    <Identifier>OtherOrg</Identifier>
+    <!-- The tenant GUID. -->
+    <Guid>bf2e2412-c610-4521-ae13-7bda286e4480</Guid>
+    <!-- May only be true for a single tenant in a tenant store. -->
+    <IsDefault>False</IsDefault>
+    <SiteContext>
+        <!-- The position of the tenant within tenant lists (e.g. navigation). -->
+        <Position>2</Position>
+        <!-- The Url segment used to identify the site. May be empty for the default tenant. -->
+        <UrlSegmentValue>otherorg</UrlSegmentValue>
+        <!-- The folder name used for a tenant. This name must be set. -->
+        <FolderName>otherorg</FolderName>
+        <!-- The cookie name used Asp.Net Identity. -->
+        <IdentityCookieName>.LeagueOther</IdentityCookieName>
+        <!-- The session name used for the tenant. -->
+        <SessionName>.LeagueOther</SessionName>
+        <!-- If true, the site will not be shown in the navigation menu. -->
+        <HideInMenu>False</HideInMenu>
+        <!-- Email contact details. -->
+        <Email>
+            <!-- "From" mailbox address for the contact form -->
+            <ContactFrom>
+                <!-- The display name of a recipient. -->
+                <DisplayName>OtherOrganization</DisplayName>
+                <!-- The email address of a recipient. -->
+                <Address>testorg@volleyball-liga.de</Address>
+            </ContactFrom>
+            <!-- "To" mailbox address for the contact form -->
+            <ContactTo>
+                <!-- The display name of a recipient. -->
+                <DisplayName>OtherOrganization</DisplayName>
+                <!-- The email address of a recipient. -->
+                <Address>testorg@volleyball-liga.de</Address>
+            </ContactTo>
+            <!-- General "To" mailbox address for emails generated programmatically -->
+            <GeneralTo>
+                <!-- The display name of a recipient. -->
+                <DisplayName>OtherOrganization</DisplayName>
+                <!-- The email address of a recipient. -->
+                <Address>testorg@volleyball-liga.de</Address>
+            </GeneralTo>
+            <!-- General "From" mailbox address for emails generated programmatically -->
+            <GeneralFrom>
+                <!-- The display name of a recipient. -->
+                <DisplayName>OtherOrganization</DisplayName>
+                <!-- The email address of a recipient. -->
+                <Address>testorg@volleyball-liga.de</Address>
+            </GeneralFrom>
+            <!-- General "BCC" mailbox address for emails generated programmatically -->
+            <GeneralBcc>
+                <!-- The display name of a recipient. -->
+                <DisplayName>OtherOrganization</DisplayName>
+                <!-- The email address of a recipient. -->
+                <Address>testorg@volleyball-liga.de</Address>
+            </GeneralBcc>
+        </Email>
+        <!-- Notifications sent before and after matches. -->
+        <MatchNotifications>
+            <!-- Number of days before the next match will be announced. 0 for none, negative number days. -->
+            <DaysBeforeNextMatch>-10</DaysBeforeNextMatch>
+            <!-- Number of days to remind 1st time for missing match results. 0 for none, positive number of days. -->
+            <DaysForMatchResultReminder1>3</DaysForMatchResultReminder1>
+            <!-- Number of days to remind 2nd time for missing match results. 0 for none, positive number of days. -->
+            <DaysForMatchResultReminder2>10</DaysForMatchResultReminder2>
+        </MatchNotifications>
+    </SiteContext>
+    <OrganizationContext>
+        <!-- The full name of the organization. -->
+        <Name>Volleyball Other Test League</Name>
+        <!-- The short version of the organization's name. -->
+        <ShortName>Other League</ShortName>
+        <Description>The other league for test purposes.</Description>
+        <!-- The homepage for the organization (NOT the league website). -->
+        <HomepageUrl>https://volleyball-liga.de/otherorg</HomepageUrl>
+        <Bank>
+            <!-- If true, bank details are part of the confirmation email when registering a team. -->
+            <ShowBankDetailsInConfirmationEmail>True</ShowBankDetailsInConfirmationEmail>
+            <!-- The name of the payment recipient, usually the organization name. -->
+            <Recipient>axuno - Other Organization</Recipient>
+            <!-- The name of the bank where a payment is directed. -->
+            <BankName>Some Bank</BankName>
+            <!-- The BIC number of the bank account. -->
+            <Bic>ABCDEFGHXXX</Bic>
+            <!-- The IBAN number of the bank. -->
+            <Iban>DE12 345 678 910 123 456 789</Iban>
+            <!-- The participation fee, may be zero. -->
+            <Amount>12.34</Amount>
+            <!-- The currency for the participation fee. -->
+            <Currency>EUR</Currency>
+        </Bank>
+    </OrganizationContext>
+    <DbContext>
+        <!-- The connection key used to retrieve the ConnectionString -->
+        <ConnectionKey>LeagueConnectionString</ConnectionKey>
+        <!-- The catalog aka database name -->
+        <Catalog>OtherOrg</Catalog>
+        <!-- The schema inside the database -->
+        <Schema>dbo</Schema>
+        <!-- The timeout value to use with database commands -->
+        <CommandTimeOut>15</CommandTimeOut>
+    </DbContext>
+    <TournamentContext>
+        <!-- The ID of the tournament which will be used for new teams' applications -->
+        <ApplicationTournamentId>2</ApplicationTournamentId>
+        <!-- True, if teams' applications are allowed, otherwise false -->
+        <ApplicationAllowed>False</ApplicationAllowed>
+        <!-- The deadline for new teams' applications -->
+        <ApplicationDeadline>04/05/2018 00:00:00</ApplicationDeadline>
+        <!-- The ID of the tournament which will be used for to display maps -->
+        <MapTournamentId>2</MapTournamentId>
+        <!-- The ID of the tournament which will be used to display team data -->
+        <TeamTournamentId>2</TeamTournamentId>
+        <!-- The ID of the tournament which will be used to display the match plan -->
+        <MatchPlanTournamentId>2</MatchPlanTournamentId>
+        <!-- The ID of the tournament which will be used to display match results and tables -->
+        <MatchResultTournamentId>2</MatchResultTournamentId>
+        <!-- The rules which apply for creating and editing fixtures -->
+        <FixtureRuleSet>
+            <!-- The time when matches start and end normally (e.g. from 18:00 - 21:00 h) -->
+            <RegularMatchStartTime>
+                <!-- Earliest start time for a match -->
+                <MinDayTime>18:00:00</MinDayTime>
+                <!-- Latest start time for a match -->
+                <MaxDayTime>21:00:00</MaxDayTime>
+            </RegularMatchStartTime>
+            <!-- The duration which is used to generate fixtures and to determine periods where a venue is occupied -->
+            <PlannedDurationOfMatch>02:00:00</PlannedDurationOfMatch>
+            <!-- If set to true, when editing a fixture the match time must be set -->
+            <PlannedMatchDateTimeMustBeSet>True</PlannedMatchDateTimeMustBeSet>
+            <!-- If set to true, the planned match time must no include any dates found in ExcludeMatchDate table entries -->
+            <CheckForExcludedMatchDateTime>True</CheckForExcludedMatchDateTime>
+            <!-- If set to true, the planned match time must stay within the current leg date boundaries. If false, the planned time must stay with in any leg date boundaries. -->
+            <PlannedMatchTimeMustStayInCurrentLegBoundaries>False</PlannedMatchTimeMustStayInCurrentLegBoundaries>
+            <!-- If set to true, when editing a fixture the venue must be set -->
+            <PlannedVenueMustBeSet>True</PlannedVenueMustBeSet>
+            <!-- If true, when checking whether teams already have a match at a certain moment, only the date will be used (i.e. only 1 match per calendar date) -->
+            <UseOnlyDatePartForTeamFreeBusyTimes>True</UseOnlyDatePartForTeamFreeBusyTimes>
+        </FixtureRuleSet>
+        <!-- The max. number of days after RealStart where results may be changed. Negative value means 'unlimited' -->
+        <MaxDaysForResultCorrection>-1</MaxDaysForResultCorrection>
+        <!-- The rules which apply for creating and editing team data -->
+        <TeamRuleSet>
+            <HomeMatchTime>
+                <!-- If true, HomeMatchTime will be shown on team forms. If false, IsEditable, DaysOfWeekRange and ErrorIfNotInDaysOfWeekRange are irrelevant. -->
+                <IsEditable>True</IsEditable>
+                <!-- If true, the HomeMatchTime must be set, i.e. cannot be null/unspecified -->
+                <MustBeSet>True</MustBeSet>
+                <!-- Allowed days of a week -->
+                <DaysOfWeekRange>
+                    <DayOfWeek>Monday</DayOfWeek>
+                    <DayOfWeek>Tuesday</DayOfWeek>
+                    <DayOfWeek>Wednesday</DayOfWeek>
+                    <DayOfWeek>Thursday</DayOfWeek>
+                    <DayOfWeek>Friday</DayOfWeek>
+                    <DayOfWeek>Saturday</DayOfWeek>
+                    <DayOfWeek>Sunday</DayOfWeek>
+                </DaysOfWeekRange>
+                <!-- If true, entries not in 'DaysOfWeekRange' are errors (else: warning) -->
+                <ErrorIfNotInDaysOfWeekRange>False</ErrorIfNotInDaysOfWeekRange>
+            </HomeMatchTime>
+        </TeamRuleSet>
+    </TournamentContext>
 </TenantContext>
