--- a/League.Demo/Configuration/Tenant.TestOrg.Production.config
+++ b/League.Demo/Configuration/Tenant.TestOrg.Production.config
@@ -143,6 +143,7 @@
         <MaxDaysForResultCorrection>-1</MaxDaysForResultCorrection>
         <!-- The rules which apply for creating and editing team data -->
         <TeamRuleSet>
+            <!-- Rules for the HomeMatchTime of a team -->
             <HomeMatchTime>
                 <!-- If true, HomeMatchTime will be shown on team forms. If false, IsEditable, DaysOfWeekRange and ErrorIfNotInDaysOfWeekRange are irrelevant. -->
                 <IsEditable>True</IsEditable>
@@ -161,6 +162,12 @@
                 <!-- If true, entries not in 'DaysOfWeekRange' are errors (else: warning) -->
                 <ErrorIfNotInDaysOfWeekRange>False</ErrorIfNotInDaysOfWeekRange>
             </HomeMatchTime>
+            <!-- Rules for the HomeVenue of a team. -->
+            <HomeVenue>
+                <!-- If true, the HomeVenue must be set, i.e. cannot be null/unspecified. -->
+                <!-- If false, when auto-creating fixtures the team will only have away-matches (i.e. is always the guest team). -->
+                <MustBeSet>True</MustBeSet>
+            </HomeVenue>
         </TeamRuleSet>
     </TournamentContext>
 </TenantContext>
