Update nuget packages for TournamentManager

--- a/TournamentManager/TournamentManager/TournamentManager.csproj
+++ b/TournamentManager/TournamentManager/TournamentManager.csproj
@@ -19,7 +19,8 @@ Volleyball League is an open source sports platform that brings everything neces
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="EPPlus" Version="6.2.6" />
+        <PackageReference Include="EPPlus" Version="6.2.8" />
+        <PackageReference Include="NLog" Version="5.2.3" />
         <PackageReference Include="NuGetizer" Version="1.1.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -28,10 +29,10 @@ Volleyball League is an open source sports platform that brings everything neces
         <PackageReference Include="OxyPlot.SkiaSharp" Version="2.1.2" />
         <PackageReference Include="System.Reflection.TypeExtensions" Version="4.7.0" />
         <PackageReference Include="Ical.Net" Version="4.2.0" />
-        <PackageReference Include="libphonenumber-csharp" Version="8.13.16" />
-        <PackageReference Include="NLog.Extensions.Logging" Version="5.3.2" />
+        <PackageReference Include="libphonenumber-csharp" Version="8.13.18" />
+        <PackageReference Include="NLog.Extensions.Logging" Version="5.3.3" />
         <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
-        <PackageReference Include="YAXLib" Version="4.1.0" />
+        <PackageReference Include="YAXLib" Version="4.2.0" />
     </ItemGroup>
 
     <ItemGroup>
