Enable null for team venue and home match day/time
Team.SelectVenue, TeamApplication.SelectVenue
* Change 'Not found' response to JsonResponseRedirect
* Change display message from TeamDataFailure to VenueSelectFailure

TeamApplication
* Call SignInManager.RefreshSignInAsync() after a user has registered a new team, so that it's immediately visible in Team.MyTeam
* Enable null for team venue and home match day/time
  * Add ApplicationSessionModel.TeamVenueSetKind to track "not set, no venue, existing venue, new venue"
  * Add TeamVenueValidator to validate selected venue types

TeamEditor component
* Add 'readonly' attribute to HTML element instead of 'disabled' for 'null' value

VenueSelector component
* Add 'Criteria.NotSpecified' if this is allowed in tenant specific 'TournamentContext'
* Include 'Criteria.NotSpecified' to selectable venue options

Team.MyTeam, Team.Single views
* Update display for venue, match day/time

--- a/TournamentManager/TournamentManager/TournamentManager.csproj
+++ b/TournamentManager/TournamentManager/TournamentManager.csproj
@@ -95,6 +95,11 @@ Volleyball League is an open source sports platform that brings everything neces
             <AutoGen>True</AutoGen>
             <DependentUpon>TeamValidatorResource.resx</DependentUpon>
         </Compile>
+        <Compile Update="ModelValidators\TeamVenueValidatorResource.Designer.cs">
+          <DesignTime>True</DesignTime>
+          <AutoGen>True</AutoGen>
+          <DependentUpon>TeamVenueValidatorResource.resx</DependentUpon>
+        </Compile>
         <Compile Update="ModelValidators\VenueValidatorResource.Designer.cs">
             <DesignTime>True</DesignTime>
             <AutoGen>True</AutoGen>
@@ -134,6 +139,10 @@ Volleyball League is an open source sports platform that brings everything neces
         <EmbeddedResource Update="ModelValidators\TeamInRoundValidatorResource.resx">
             <LastGenOutput>TeamInRoundValidatorResource.Designer.cs</LastGenOutput>
             <Generator>ResXFileCodeGenerator</Generator>
+        </EmbeddedResource>
+        <EmbeddedResource Update="ModelValidators\TeamVenueValidatorResource.resx">
+          <Generator>ResXFileCodeGenerator</Generator>
+          <LastGenOutput>TeamVenueValidatorResource.Designer.cs</LastGenOutput>
         </EmbeddedResource>
         <EmbeddedResource Update="ModelValidators\VenueValidatorResource.resx">
             <LastGenOutput>VenueValidatorResource.Designer.cs</LastGenOutput>
