Update embedded resource in project file
* Add all files in wwwroot folder as embedded resoource
* Add *.tpl files in Templates\Email folder as embedded resource
* Append versions to stylesheet and script links

--- a/League/League.csproj
+++ b/League/League.csproj
@@ -229,16 +229,8 @@ Localizations for English and German are included. The library is in operation o
     </ItemGroup>
 
     <ItemGroup>
-        <EmbeddedResource Include="Templates\Email\*.tpl" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <EmbeddedResource Include="Templates\Email\AnnounceNextMatchTxt\en.tpl" />
-        <EmbeddedResource Include="Templates\Email\AnnounceNextMatchTxt\de.tpl" />
-        <EmbeddedResource Include="Templates\Email\RemindMatchResultTxt\en.tpl" />
-        <EmbeddedResource Include="Templates\Email\RemindMatchResultTxt\de.tpl" />
-        <EmbeddedResource Include="Templates\Email\UrgeMatchResultTxt\en.tpl" />
-        <EmbeddedResource Include="Templates\Email\UrgeMatchResultTxt\de.tpl" />
+        <EmbeddedResource Include="wwwroot\**\*" />
+        <EmbeddedResource Include="Templates\Email\**\*.tpl" />
     </ItemGroup>
 
     <ItemGroup>
