--- a/Axuno.Tools.Tests/Axuno.Tools.Tests.csproj
+++ b/Axuno.Tools.Tests/Axuno.Tools.Tests.csproj
@@ -9,9 +9,19 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <None Remove="FileSystem\Data\data.json" />
+      <None Remove="FileSystem\Data\my-json-file.json" />
+    </ItemGroup>
+
+    <ItemGroup>
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
             <_Parameter1>$(AssemblyName).Tests</_Parameter1>
         </AssemblyAttribute>
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Include="FileSystem\Data\data.json" />
+      <EmbeddedResource Include="FileSystem\Data\my-json-file.json" />
     </ItemGroup>
 
     <ItemGroup>
