Refactor and stabilize Site global javascript modules
* Update Bootstrap to v5.3.2
* Avoid errors on Safari browser
* Move function variables to functions
* Add more code comments
* Remove obsolete Polyfill.js
* Modify .editor.config for javascript (use single quotes)

--- a/.editorconfig
+++ b/.editorconfig
@@ -260,5 +260,8 @@ dotnet_style_qualification_for_property = false:suggestion
 dotnet_style_qualification_for_method = false:suggestion
 dotnet_style_qualification_for_event = false:suggestion
 
+[*.js]
+quote_style = singlequoted
+
 # Copyright file header
 file_header_template = \nCopyright Volleyball League Project maintainers and contributors.\nLicensed under the MIT license.\n
