Improve performance for creating fixtures with MatchScheduler
* Planned matches of a tournament are cached for faster checks of available dates
* Extend debug logging
* Update tenant settings for development to include RefereeRuleSet

Update MatchScheduler

--- a/League.Demo/Configuration/Tenant.Default.Production.config
+++ b/League.Demo/Configuration/Tenant.Default.Production.config
@@ -168,5 +168,10 @@
                 <MustBeSet>True</MustBeSet>
             </HomeVenue>
         </TeamRuleSet>
+        <!-- Rules for referee master data -->
+        <RefereeRuleSet>
+	        <!-- Rules for organizing referees -->
+	        <RefereeType>None</RefereeType>
+        </RefereeRuleSet>
     </TournamentContext>
 </TenantContext>
