--- a/League.Demo/Configuration/Tenant.OtherOrg.Production.config
+++ b/League.Demo/Configuration/Tenant.OtherOrg.Production.config
@@ -168,5 +168,10 @@
                 <MustBeSet>True</MustBeSet>
             </HomeVenue>
         </TeamRuleSet>
+        <!-- Rules for referee master data -->
+        <RefereeRuleSet>
+	        <!-- Rules for organizing referees -->
+	        <RefereeType>Home</RefereeType>
+        </RefereeRuleSet>
     </TournamentContext>
 </TenantContext>
