--- a/League/package.json
+++ b/League/package.json
@@ -7,29 +7,29 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-    "devDependencies": {
-        "@fortawesome/fontawesome-free": "5.13.1",
-        "autoprefixer": "9.8.8",
-        "bootstrap": "5.3.2",
-        "cssnano": "4.1.11",
-        "dropzone": "5.7.1",
-        "grunt": "1.6.1",
-        "grunt-cli": "1.4.3",
-        "grunt-contrib-concat": "2.1.0",
-        "grunt-contrib-copy": "1.0.0",
-        "grunt-contrib-uglify": "5.2.2",
-        "grunt-contrib-watch": "1.1.0",
-        "grunt-postcss": "0.9.0",
-        "grunt-sass": "3.1.0",
-        "js-cookie": "2.2.1",
-        "jsnlog": "2.30.0",
-        "node-sass": "9.0.0",
-        "postcss": "^8.4.31",
-        "pixrem": "5.0.0",
-        "@popperjs/core": "2.11.8",
-        "@eonasdan/tempus-dominus": "6.7.19",
-        "set-value": ">=4.1.0"
-    },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "5.13.1",
+    "autoprefixer": "10.4.19",
+    "bootstrap": "5.3.3",
+    "cssnano": "7.0.1",
+    "dropzone": "5.7.1",
+    "grunt": "1.6.1",
+    "grunt-cli": "1.4.3",
+    "grunt-contrib-concat": "2.1.0",
+    "grunt-contrib-copy": "1.0.0",
+    "grunt-contrib-uglify": "5.2.2",
+    "grunt-contrib-watch": "1.1.0",
+    "@lodder/grunt-postcss": "3.1.1",
+    "grunt-sass": "3.1.0",
+    "js-cookie": "2.2.1",
+    "jsnlog": "2.30.0",
+    "node-sass": "9.0.0",
+    "postcss": "^8.4.38",
+    "pixrem": "5.0.0",
+    "@popperjs/core": "2.11.8",
+    "@eonasdan/tempus-dominus": "6.9.6",
+    "set-value": ">=4.1.0"
+  },
     "dependencies": {
         "uglify-js": "3.17.4"
     }
