Rewrite class TournamentCreator
* breaking: Rewrite class TournamentCreator
   * Move all DAL operations to TournamentRepository
   * All operations for adding a new Tournament are inside a Transaction
* chore: Add logging
* feat: Add new methods to TournamentRepository
* breaking: Rename TournamentEntity.Tournament to TournamentEntity.NextTournament
* chore: Move NuGetizer settings to Directory.Build.props

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -18,6 +18,8 @@
         <AnalysisLevel>latest</AnalysisLevel>
         <Features>strict</Features>
         <NoWarn>$(NoWarn);1591</NoWarn>
+        <!-- If true (default), NuGetizer will apply the shortened revision ID to the package version during the packing process. -->
+        <UseShortSourceRevisionId>false</UseShortSourceRevisionId>
     </PropertyGroup>
 
 </Project>
