Fix partly broken import of excluded match dates
* Fix `GermanHoliday.ProcessHoliday` method to set correct `dateFrom` and `dateTo`.
* Add more constructors to `GermanHolidayImporter` to import more than 1 file in one go.
* Remove ignored test case and added new one in `GermanHolidayImporterTests`.
* Rename `EnumerableValueTupleExtensions.cs` to `EnumerableRangeExtensions.cs` for consecutive range calculations.
* Add `EnumerableValueTupleExtensionsTests` for `EnumerableValueTupleExtensions` methods.*

--- a/TournamentManager/TournamentManager.Tests/TournamentManager.Tests.csproj
+++ b/TournamentManager/TournamentManager.Tests/TournamentManager.Tests.csproj
@@ -22,6 +22,12 @@
     <ProjectReference Include="..\TournamentManager\TournamentManager.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <None Update="Assets\Single_Holiday_To_Remove.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\Single_Holiday_To_Add.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\Custom_Holidays_Sample.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
