--- a/TournamentManager/TournamentManager/TournamentManager.csproj
+++ b/TournamentManager/TournamentManager/TournamentManager.csproj
@@ -27,7 +27,8 @@ Volleyball League is an open source sports platform that brings everything neces
     <PackageReference Include="OxyPlot.SkiaSharp" Version="2.2.0" />
     <PackageReference Include="PuppeteerSharp" Version="20.0.2" />
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.7.0" />
-    <PackageReference Include="Ical.Net" Version="4.2.0" />
+    <!-- Replace original Ical.Net v4.2.0 with more up-to-date fork -->
+    <PackageReference Include="laget.Ical.Net" Version="4.3.9" />
     <PackageReference Include="libphonenumber-csharp" Version="8.13.46" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.3.14" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
